[package]
name = "hashable-map"
version = "0.2.2"
edition = "2021"
authors = ["Fabian Bösiger"]
description = "Wrappers for HashMap and HashSet that implement Hash"
readme = "README.md"
repository = "https://github.com/fabianboesiger/hashable-map"
keywords = ["hashmap", "hashset", "hash", "hashable", "wrapper"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"

[dev-dependencies]
rand = { version = "0.8", features = ["min_const_gen"] }
fxhash = "0.2"
fnv = "1.0"
ahash = "0.8"
